=======
CHANGES
=======

0.6.1 (unreleased)
------------------

- Nothing changed yet.


0.6 (2011-10-05)
----------------

- Selenium test runner recipe
- Create a http://launchpad.net/schooltool.devtools project


0.5.4 (2011-05-11)
------------------

- Update Makefile and other build files from newer schooltool


0.5.3 (2010-03-17)
------------------

- i18nextract now produces sorted POTs
- Write pot creation date in standard format
- Write domain to Product-Id-Version


0.5.2 (2009-11-04)
------------------

- `i18nextract --egg PACKAGE ...` now supports multiple eggs
- Use python2.5 by default
- Make `buildout.cfg` extend SchoolTool KGS
- Add tags and coverage support to buildout


0.5.1 (2008-04-02)
------------------

- Initial release.