@@ -5,7 +5,8 @@ CHANGES
 0.6.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Restore support for python << 2.6, move selenium dependent code to
+  webdriver.py
 
 
 0.6 (2011-10-05)
